# RustMCPServers

./: .dockerignore  .github_workflows_ci_security_report.json  .github_workflows_ci_validation_report.md  .github_workflows_security-scan_security_report.json  .github_workflows_test-suite_validation_report.md  .gitignore  CLAUDE.md  Cargo.toml  GITHUB_ACTIONS_QUALITY_IMPROVEMENT_REPORT.md  LICENSE  README.md  ci_health_report.md  user-stories.md
duckduckgo-mcp-server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  build_test.sh  docker-compose.yml
duckduckgo-mcp-server/.github/workflows/: ci.yml  docker.yml
duckduckgo-mcp-server/src/: auth.rs  auth_routes.rs  auth_service.rs  client.rs  config.rs  duckduckgo.rs  lib.rs  main.rs  mcp_handler.rs  mcp_types.rs
duckduckgo-mcp-server/tests/: comprehensive_integration_tests.rs  duckduckgo_integration_tests.rs  integration_tests.rs  mcp_test_client.rs  unit_tests.rs
servers/example-server/: Cargo.toml
servers/json-validator-http/: Cargo-minimal.toml  Cargo.toml  DOCKER_GUIDE.md  DOCKER_VERIFICATION.md  Dockerfile  Dockerfile.optimized  Dockerfile.simple  Dockerfile.standalone  FINAL_SUMMARY.md  FINAL_VALIDATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  PROJECT_VERIFICATION_REPORT.md  QUALITY_IMPROVEMENT_SUMMARY.md  README.md  TESTS.md  USAGE.md  build.sh  demo.sh  docker-compose.standalone.yml  docker-compose.yml  docker-entrypoint.sh  health-check.sh  json-validator-http-basic  json-validator-http-enhanced  run_tests.sh  test.sh  test_basic.sh
servers/json-validator-http/benches/: performance.rs
servers/json-validator-http/config/: default.toml  test.toml
servers/json-validator-http/examples/: client.rs
servers/json-validator-http/json-validator-standalone/: Cargo.toml
servers/json-validator-http/monitoring/: prometheus.yml
servers/json-validator-http/src/: app.rs  basic_server.rs  config.rs  enhanced_server.rs  handlers.rs  lib.rs  main.rs  minimal_server.rs  models.rs  performance.rs  services.rs  standalone_main.rs  tls.rs
servers/json-validator-http/tests/: integration_tests.rs  performance_tests.rs
servers/json-validator-server/: CLAUDE.md  Cargo.toml  README.md  invalid.json  test.json  test_invalid.json  test_valid.json
servers/json-validator-server/docs/: acceptance-criteria.md  requirements.md  user-stories.md
servers/json-validator-server/src/: json_validator.rs  main.rs
servers/json-validator-server/tests/: integration_tests.rs
servers/simple-task-orchestrator/: CLAUDE-CODE-FEATURES.md  CLAUDE.md  Cargo.toml  PROJECT-SUMMARY.md  README.md  TESTING_COVERAGE.md  demo-claude-code.sh  ecosystem.config.js  simple_test.js  start_server.sh  test_complete.js  test_mcp_server.js  test_mcp_server.sh  test_mcp_server_v2.js  test_no_init_notification.js  优化计划.md  修复策略.md  测试增强计划.md
servers/simple-task-orchestrator/benches/: task_benchmarks.rs
servers/simple-task-orchestrator/docs/: CLAUDE-CODE-INTEGRATION.md
servers/simple-task-orchestrator/src/: lib.rs  main.rs  mcp_server.rs
servers/task-orchestrator/: .env  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sqlx-data.json  tasks.db  tasks.db-shm  tasks.db-wal
servers/task-orchestrator-mcp/: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.toml
servers/task-orchestrator-mcp/docs/: DOCKER.md  rmcp-serverinfo-structure.md
servers/task-orchestrator-mcp/migrations/: 20240101_initial.sql
servers/task-orchestrator-mcp/src/: api.rs  config.rs  main.rs  models.rs  server.rs  storage.rs
servers/task-orchestrator/config/: default.toml  production.toml
servers/task-orchestrator/docs/: API_EXAMPLES.md
servers/task-orchestrator/k8s/: deployment.yaml
servers/task-orchestrator/migrations/: 20250818000000_initial_schema.sql
servers/task-orchestrator/src/: main.rs  task.rs
tests/: COMPLETION_SUMMARY.md  COMPREHENSIVE_TEST_PLAN.md  Cargo.toml  FINAL_COMPLETION_REPORT.md  FINAL_VALIDATION_REPORT.md  README.md  SIMPLE_TESTS_IMPLEMENTATION_SUMMARY.md  TEST_SUITE_IMPLEMENTATION_SUMMARY.md  TEST_VALIDATION_REPORT.md  VALIDATION_CHECKLIST.md  _root_WorkSpace_Rust_RustMCPServers_.github_workflows_apt-r2_security_report.md  _root_WorkSpace_Rust_RustMCPServers_.github_workflows_apt-r2_validation_report.md  _root_WorkSpace_Rust_RustMCPServers_.github_workflows_ci_security_report.md  _root_WorkSpace_Rust_RustMCPServers_.github_workflows_ci_validation_report.md  _root_WorkSpace_Rust_RustMCPServers_.github_workflows_claude-code-review_security_report.md  _root_WorkSpace_Rust_RustMCPServers_.github_workflows_claude-code-review_validation_report.md  _root_WorkSpace_Rust_RustMCPServers_.github_workflows_claude_security_report.md  _root_WorkSpace_Rust_RustMCPServers_.github_workflows_claude_validation_report.md  _root_WorkSpace_Rust_RustMCPServers_.github_workflows_license-check_security_report.md  _root_WorkSpace_Rust_RustMCPServers_.github_workflows_license-check_validation_report.md  _root_WorkSpace_Rust_RustMCPServers_.github_workflows_release_security_report.md  _root_WorkSpace_Rust_RustMCPServers_.github_workflows_release_validation_report.md  _root_WorkSpace_Rust_RustMCPServers_.github_workflows_security-scan_security_report.md  _root_WorkSpace_Rust_RustMCPServers_.github_workflows_security-scan_validation_report.md  _root_WorkSpace_Rust_RustMCPServers_.github_workflows_test-suite_security_report.md  _root_WorkSpace_Rust_RustMCPServers_.github_workflows_test-suite_validation_report.md  debug_secret_detection.rs  debug_secrets.sh  demo_workflow_security_report.json  final_demo.sh  test_regex.sh  usage_example.sh  verify_basic_functionality.sh
tests/benches/: workflow_performance.rs
tests/fixtures/: ci_workflow.yml  release_workflow.yml  security_workflow.yml
tests/scripts/: run_tests.sh
tests/src/: comprehensive_reporter.rs  coverage_reporter.rs  lib.rs  performance_tester.rs  performance_tester_old.rs  security_tester.rs  security_tester_old.rs  simple_tests.rs  workflow_executor.rs  workflow_validator.rs
tests/tests/: e2e_tests.rs  integration_tests.rs  unit_tests.rs
(+110 files in other folders)
