[package]
name = "a2a-mcp-agent"
version = "0.1.0"
edition = "2021"
authors = ["A2A-MCP Agent Team"]
description = "A Rust Agent implementing A2A + MCP protocols for multi-agent tool orchestration"
repository = "https://github.com/your-org/a2a-mcp-agent"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
url = "2.4"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"

[[bin]]
name = "agent-cli"
path = "src/main.rs"

[workspace]
members = []
exclude = ["example/*"]