[workspace]
resolver = "2"
members = [
    "servers/json-validator-server", 
    "servers/json-validator-http", 
    "servers/json-validator-http/json-validator-standalone",
    "servers/task-orchestrator", 
    "servers/task-orchestrator-mcp",
    "tests",
]
exclude = [
    "target",
    "tmp",
    "servers/simple-task-orchestrator"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RustMCPServers Team"]
license = "MIT"
repository = "https://github.com/ModerRAS/RustMCPServers"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client and server
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br", "timeout", "request-id"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
schemars = { version = "0.8", features = ["derive"] }

# MCP protocol
rmcp = { version = "0.5", features = [
    "transport-io", 
    "transport-child-process", 
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
    "transport-worker",
    "macros"
] }

# Configuration
dotenvy = "0.15"

# Testing
mockito = "1.5"
tokio-test = "0.4"

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1
