[package]
name = "duckduckgo-mcp-server"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "DuckDuckGo MCP Server with HTTP transport and advanced features"
license = "MIT"
repository = "https://github.com/yourusername/duckduckgo-mcp-server"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.19"
urlencoding = "2.1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
moka = { version = "0.12", features = ["future"] }
governor = "0.6"
once = "0.1"
config = "0.14"
validator = { version = "0.16", features = ["derive"] }
regex = "1.0"
