[package]
name = "github-actions-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mockito = { workspace = true }
tokio-test = { workspace = true }

# Additional dependencies
serde_yaml = "0.9"
regex = "1.0"
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
pretty_assertions = "1.0"
test-case = "3.0"
rand = "0.8"
walkdir = "2.0"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "workflow_performance"
harness = false

[[bin]]
name = "validate_workflow"
path = "src/bin/validate_workflow.rs"

[[bin]]
name = "security_test"
path = "src/bin/security_test.rs"