[package]
name = "task-orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Task Orchestrator MCP Server - A high-performance task management system"

[[bin]]
name = "task-orchestrator"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json", "migrate"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Date and time
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true }

# Configuration
config = "0.13"
dotenvy = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Validation
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"

# Utilities
derive_more = "0.99"
strum = { version = "0.25", features = ["derive"] }
paste = "1.0"

# HTTP client (for external services)
reqwest = { workspace = true }
url = { workspace = true }

# Metrics and monitoring
prometheus = "0.13"

# Testing
tokio-test = { workspace = true }
mockito = { workspace = true }
tempfile = "3.8"

[dev-dependencies]
criterion = "0.5"

[features]
default = []
test-utils = []

