[package]
name = "json-validator-standalone"
version = "0.1.0"
edition = "2021"
authors = ["RustMCPServers Team"]
description = "Standalone HTTP JSON validation server"

[workspace]


[[bin]]
name = "json-validator-standalone"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"